--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -49,8 +49,8 @@
               <tr>
                 <th>ID</th>
                 <th>Timestamp</th>
-                <th>Heart Rate</th>
-                <th>SPO2</th>
+                <th>Heart Rate (bpm)</th>
+                <th>SpO2 (%)</th>
               </tr>
             </thead>
             <tbody>
@@ -122,7 +122,7 @@
                   tension: 0.1
                 },
                 {
-                  label: 'SPO2',
+                  label: 'SpO2',
                   data: spo2Values,
                   borderColor: 'blue',
                   backgroundColor: 'rgba(0, 0, 255, 0.2)',
